# NewRep

./: BitArray.cpp  Body.cpp  Body.h  CMakeLists.txt  Tests.cpp  lab1.cpp  lab1.sln
.github/workflows/: test.yml
